initial check-in

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Design-the-case by stanleyn</title>
+    <title>Yahoo | Smart Phones, Smart Fun - Design the Case!</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -13,16 +13,35 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper clearfix">
       <header>
-        <h1>Design-the-case</h1>
-        <p>Smart Phones, Smart Fun - Design the Case!</p>
+        <h1>"I ❤ MY JOB @ YAHOO"</h1>
+        <h4>DESIGN DETAILS</h4>
 
+        <!--
         <p class="view"><a href="https://git.corp.yahoo.com/stanleyn/design-the-case">View the Project on GitHub <small>stanleyn/design-the-case</small></a></p>
-
+        //-->
 
       </header>
       <section>
+<div class="row">
+    <a href="assets/images/i-love-my-job-stanleyn.png" target="_blank"><img src="assets/images/i-love-my-job-stanleyn.png" /></a>
+</div>
+
+<div class="row">
+    <h2>
+    <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Voting Steps</h2>
+    <ol>
+        <li>Visit <a href="http://yo/designthecase-stanleyn" target="_blank">yo/designthecase-stanleyn</a></li>
+        <li>Select "Most Thumbs Up"</li>
+        <li>Search "I ❤ MY JOB @ YAHOO" in page 1</li>
+        <li>Click "Thumbs Up" icon</li>
+        <li>Observe the count increased by 1</li>
+        <li>Done!</li>
+    </ul>
+</div>
+
+<!--
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -60,7 +79,22 @@ $ git checkout gh-pages
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
+//-->
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://git.corp.yahoo.com/stanleyn">stanleyn</a></p>
+        <p><small>Hosted on GitHub Pages</small></p>
+      </footer>
+    </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-55626551-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
