--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Voting Steps</h2>
     <ol>
         <li>Visit <a href="http://yo/designthecase-stanleyn" target="_blank">yo/designthecase-stanleyn</a></li>
-        <li>Select "Most Thumbs Up"</li>
+        <li>Select "Most Thumbs Up" option</li>
         <li>Search "I ❤ MY JOB @ YAHOO" in page 1</li>
-        <li>Click "Thumbs Up" icon</li>
+        <li>Click "Thumbs Up" button</li>
         <li>Observe the count increased by 1</li>
         <li>Done!</li>
     </ul>
