add avatar, name-yos, remark details

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <a href="assets/images/i-love-my-job-stanleyn.png" target="_blank"><img src="assets/images/i-love-my-job-stanleyn.png" /></a>
 </div>
 
-<div class="row">
+<div class="row critical">
     <h2>
-    <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Voting Steps</h2>
+    <a name="voting-steps" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Voting Steps</h2>
     <ol>
         <li>Visit <a href="http://yo/designthecase-stanleyn" target="_blank">yo/designthecase-stanleyn</a></li>
         <li>Select "Most Thumbs Up" option</li>
@@ -39,6 +39,24 @@
         <li>Observe the count increased by 1</li>
         <li>Done!</li>
     </ul>
+</div>
+
+<div class="row">
+    <h2>
+    <a name="avatar" class="anchor" href="#avatar"><span class="octicon octicon-link"></span></a>Avatar</h2>
+    <a href="assets/images/avatar.png" target="_blank"><img src="assets/images/avatar.png" /></a>
+</div>
+
+<div class="row">
+    <h2>
+    <a name="name-yos" class="anchor" href="#yos"><span class="octicon octicon-link"></span></a>Name & Year of Service</h2>
+    <a href="assets/images/name-yos.png" target="_blank"><img src="assets/images/name-yos.png" /></a>
+</div>
+
+<div class="row">
+    <h2>
+    <a name="remark" class="anchor" href="#remark"><span class="octicon octicon-link"></span></a>Remark</h2>
+    <a href="assets/images/remark.png" target="_blank"><img src="assets/images/remark.png" /></a>
 </div>
 
 <!--
