--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <header>
         <h1>"I ❤ MY JOB @ YAHOO"</h1>
         <h4>DESIGN DETAILS</h4>
+        <p>Let's <strong>personalized</strong> your mobile phone case!</p>
 
         <!--
         <p class="view"><a href="https://git.corp.yahoo.com/stanleyn/design-the-case">View the Project on GitHub <small>stanleyn/design-the-case</small></a></p>
