--- a/index.html
+++ b/index.html
@@ -31,15 +31,22 @@
 
 <div class="row critical">
     <h2>
-    <a name="voting-steps" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Voting Steps</h2>
+    <a name="voting-steps" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>**Voting Steps**</h2>
     <ol>
         <li>Visit <a href="http://yo/designthecase-stanleyn" target="_blank">yo/designthecase-stanleyn</a></li>
-        <li>Select "Most Thumbs Up" option</li>
-        <li>Search "I ❤ MY JOB @ YAHOO" in page 1</li>
-        <li>Click "Thumbs Up" button</li>
+        <li>Select <strong>"Most Thumbs Up"</strong> option</li>
+        <li>Search <strong>"I ❤ MY JOB @ YAHOO"</strong> in page 1</li>
+        <li>Click <strong>"Thumbs Up"</strong> button</li>
         <li>Observe the count increased by 1</li>
         <li>Done!</li>
     </ul>
+</div>
+
+<div class="row">
+    <h2>
+    <a name="walkthrough" class="anchor" href="#walkthrough"><span class="octicon octicon-link"></span></a>Walk Through</h2>
+    <a href="assets/images/ios8_designthecase.gif" target="_blank"><img src="assets/images/ios8_designthecase.gif" height="590" /></a>
+    <a href="assets/images/ios8_designthecase_debug.gif" target="_blank"><img src="assets/images/ios8_designthecase_debug.gif" height="590" /></a>
 </div>
 
 <div class="row">
@@ -60,6 +67,12 @@
     <a href="assets/images/remark.png" target="_blank"><img src="assets/images/remark.png" /></a>
 </div>
 
+<div class="row critical">
+    <h2>
+    <a name="vote" class="anchor" href="#vote"><span class="octicon octicon-link"></span></a>
+    <a href="#voting-steps">Please vote for my design! Thanks!</a>
+    </h2>
+</div>
 <!--
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
