--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ $ git checkout gh-pages
 //-->
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://git.corp.yahoo.com/stanleyn">stanleyn</a></p>
+        <p>This project is maintained by <a href="https://git.corp.yahoo.com/stanleyn/design-the-case">stanleyn</a></p>
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
