--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h2>
     <a name="voting-steps" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>**Voting Steps**</h2>
     <ol>
-        <li>Visit <a href="http://yo/designthecase-stanleyn" target="_blank">yo/designthecase-stanleyn</a></li>
+        <li>Visit <a href="http://yo/designthecase-stanleyn" target="_blank">http://yo/designthecase-stanleyn</a></li>
         <li>Select <strong>"Most Thumbs Up"</strong> option</li>
         <li>Search <strong>"I ❤ MY JOB @ YAHOO"</strong> in page 1</li>
         <li>Click <strong>"Thumbs Up"</strong> button</li>
