add html comment

--- a/index.html
+++ b/index.html
@@ -1,6 +1,62 @@
 <!doctype html>
 <html>
   <head>
+<!--
+                                                                                                    
+   .c,;;
+   ,l,::
+    'll'
+
+     .,
+     lO.
+     c0.
+     c0.
+     lO.
+     ;o
+
+                                         .,,.       .;:.
+                                       .dXWNN0d,  ,xXNX0.
+    .lol:                              ;NWNNNNkkkkXKNN0K.
+    dk::X'                             .oXWWNNKkNWXKKd0d
+   'Oo.lK.                               :KWNWddNWWKlkk.
+   ,Ol.kl    'dxlc:.  .o,             ..  .dNWNNOXWX0c
+    dO0l    lXl. .,o,  :0:    .;.  .lOxo0;  :0N0ON0c.
+    oXc    'Kc     ;O.  lN;  .xd   xKl.lX;    dKO:
+   'cO:    lk      .O'  .Ox  cX,  .Xx.:0:     ,k,
+     ox    od      'k.   'O'.Ol   ;XOxx'
+     'O.   ok      ll     :xdx    'Od.
+      l:   'Kd.  .do       xN,     .lxl;'.
+      ..    ;kkookd.       .:.       .'::.
+              .',.
+                                       .:c:.                    .;lol;,.
+       .'. .clll.                      l0kk'                 .lxo:'.cxdk.
+     ckkol;dOc:kk                      .;::   ..    .,,'    ;OOO.   ;cll
+     xXo:lONd. .x'                       cN, :O,   :Kkccll..x;;k.  .dOo.
+     oX, '00.   l: .:.    :l             ;WlxXc   :Kl    co . 'x''dKxcok,
+     ox   cd    :l .xo.  :KO.            .OXd.   ,No      l,  c0kxl'  .dx
+     od   cx    :l  .xOdO0ok:            ;XO     lN,      c:.xXN0:    .do
+     lo   ck    :l   .::'  ox           .xdk.    oN'      l',ook:     ;x:
+     lo   :x    :c         ox.         .ko.k;    lW:     co    ll    .xd.
+     ''    .    ..       .'kx,         :X, xl    .k0c. .ox.    ,c  .;o:
+                        'xxo           lX' xo      'lddd:      .,,;,.
+                        .c:            .xold'                   .
+
+        .''.      ,:'        ':'                                                .....         .;.
+     .c::;,;;:'   'ONl     .lKO'  'l:      .lc.      .cl.   .:c:::cc,.      'loc::::cldl.     lWx.
+     c.....',.:c   .xXc    dNd.  .OXXo     'XK.      .0N' ,kO:.   .'d0d.  .xXo.       .lKd.   dX,
+     c  .'';k;.x,    oXo. oXo.   l0;dNc    .XK.      .OX':K0,        cXK,'0Xl           oNk.  xx
+     c' ':';0o'x.     xNkkXc    ;Kc .0K.   .XK,......,0XcKXo          xNdlNk.           ,XNc .O:
+     .;,''',ko;.      .lXNl    ;XO...,0x.  .XXc,,,,,,c0XlKNo          dNxlNk.           ,KNl ,k.
+         ...           .0W,   ;K0o::::oXO. .XK.      .OX,oN0.        ,0X:,KXc           cNO. oo
+                       'KW;  ,X0'      oWd 'XK.      .0X' cKO.     .:0k,  ,0Xc         ,0O,  c,
+                       ,KW;  cx;       .dx;'dd.      .ox.  .;lc:;;:lc,     .cxdc;'.';cdx;   ';.
+                       .co.                                                   ..',,''.      ;o.
+
+
+
+    Please vote for my design!!
+    https://git.corp.yahoo.com/pages/stanleyn/design-the-case/#voting-steps
+-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Yahoo | Smart Phones, Smart Fun - Design the Case!</title>
