added black label collection

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 <!--
-                                                                                                    
+
    .c,;;
    ,l,::
     'll'
@@ -114,6 +114,12 @@
     <h2>
     <a name="remark" class="anchor" href="#remark"><span class="octicon octicon-link"></span></a>Remark</h2>
     <a href="assets/images/remark.png" target="_blank"><img src="assets/images/remark.png" /></a>
+</div>
+
+<div class="row">
+    <h2>
+    <a name="black-label-collection" class="anchor" href="#remark"><span class="octicon octicon-link"></span></a>Black Label Collection</h2>
+    <a href="assets/images/black.png" target="_blank"><img src="assets/images/black.png" /></a>
 </div>
 
 <div class="row">
