--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <header>
         <h1>"I ❤ MY JOB @ YAHOO"</h1>
         <h4>DESIGN DETAILS</h4>
-        <p>Let's <strong>personalized</strong> your mobile phone case!</p>
+        <p>Let's <strong>personalize</strong> your mobile phone case!</p>
 
         <!--
         <p class="view"><a href="https://git.corp.yahoo.com/stanleyn/design-the-case">View the Project on GitHub <small>stanleyn/design-the-case</small></a></p>
@@ -112,13 +112,13 @@
 
 <div class="row">
     <h2>
-    <a name="remark" class="anchor" href="#remark"><span class="octicon octicon-link"></span></a>Remark</h2>
+    <a name="remarks" class="anchor" href="#remarks"><span class="octicon octicon-link"></span></a>Remark</h2>
     <a href="assets/images/remark.png" target="_blank"><img src="assets/images/remark.png" /></a>
 </div>
 
 <div class="row">
     <h2>
-    <a name="black-label-collection" class="anchor" href="#remark"><span class="octicon octicon-link"></span></a>Black Label Collection</h2>
+    <a name="black" class="anchor" href="#black"><span class="octicon octicon-link"></span></a>Black Label Collection</h2>
     <a href="assets/images/black.png" target="_blank"><img src="assets/images/black.png" /></a>
 </div>
 
