--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 <div class="row">
     <h2>
-    <a name="remarks" class="anchor" href="#remarks"><span class="octicon octicon-link"></span></a>Remark</h2>
+    <a name="remarks" class="anchor" href="#remarks"><span class="octicon octicon-link"></span></a>Remarks</h2>
     <a href="assets/images/remark.png" target="_blank"><img src="assets/images/remark.png" /></a>
 </div>
 
