updated responsive size for images

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 <div class="row">
     <h2>
     <a name="walkthrough" class="anchor" href="#walkthrough"><span class="octicon octicon-link"></span></a>Walk Through</h2>
-    <a href="assets/images/ios8_designthecase.gif" target="_blank"><img src="assets/images/ios8_designthecase.gif" height="590" /></a>
-    <a href="assets/images/ios8_designthecase_debug.gif" target="_blank"><img src="assets/images/ios8_designthecase_debug.gif" height="590" /></a>
+    <a href="assets/images/ios8_designthecase.gif" target="_blank"><img class="animated-gif" src="assets/images/ios8_designthecase.gif" /></a>
+    <a href="assets/images/ios8_designthecase_debug.gif" target="_blank"><img class="animated-gif" src="assets/images/ios8_designthecase_debug.gif" /></a>
 </div>
 
 <div class="row critical">
