added animated heart

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <body>
     <div class="wrapper clearfix">
       <header>
-        <h1>"I ❤ MY JOB @ YAHOO"</h1>
+        <h1>"I <span class="heart">❤</span> MY JOB @ YAHOO"</h1>
         <h4>DESIGN DETAILS</h4>
         <p>Let's <strong>personalize</strong> your mobile phone case!</p>
 
