--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <div class="row critical">
     <h2>
     <a name="vote" class="anchor" href="#vote"><span class="octicon octicon-link"></span></a>
-    <a href="#voting-steps">Please vote for my design! Thanks!</a>
+    <a href="#voting-steps">❤ my design? Please vote for me!! Thanks!!</a>
     </h2>
 </div>
 <!--
@@ -181,6 +181,28 @@ $ git checkout gh-pages
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script src="javascripts/jquery-2.1.1.min.js"></script>
+    <script>
+        (function ($) {
+            var clicked = false;
+
+            $(document).ready(function () {
+                $('span.heart').click(function () {
+                    if (clicked) {
+                        // switch on light
+                        console.log('switch on light!');
+                    }
+                    else {
+                        // switch off light
+                        console.log('switch off light!');
+                    }
+                    $('html').toggleClass('dark-theme');
+                    clicked = !clicked;
+                });
+            });
+
+        }(jQuery));
+    </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
