--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <div class="row critical">
     <h2>
     <a name="vote" class="anchor" href="#vote"><span class="octicon octicon-link"></span></a>
-    <a href="#voting-steps">❤ my design? Please vote for me!! Thanks!!</a>
+    <span class="heart">❤</span>&nbsp;<a href="#voting-steps">my design? Please vote for me!! Thanks!!</a>
     </h2>
 </div>
 <!--
