update the page

--- a/index.html
+++ b/index.html
@@ -1,216 +1,204 @@
 <!doctype html>
 <html>
-  <head>
-<!--
+<head>
+    <!--
 
-   .c,;;
-   ,l,::
-    'll'
+       .c,;;
+       ,l,::
+        'll'
 
-     .,
-     lO.
-     c0.
-     c0.
-     lO.
-     ;o
+         .,
+         lO.
+         c0.
+         c0.
+         lO.
+         ;o
 
-                                         .,,.       .;:.
-                                       .dXWNN0d,  ,xXNX0.
-    .lol:                              ;NWNNNNkkkkXKNN0K.
-    dk::X'                             .oXWWNNKkNWXKKd0d
-   'Oo.lK.                               :KWNWddNWWKlkk.
-   ,Ol.kl    'dxlc:.  .o,             ..  .dNWNNOXWX0c
-    dO0l    lXl. .,o,  :0:    .;.  .lOxo0;  :0N0ON0c.
-    oXc    'Kc     ;O.  lN;  .xd   xKl.lX;    dKO:
-   'cO:    lk      .O'  .Ox  cX,  .Xx.:0:     ,k,
-     ox    od      'k.   'O'.Ol   ;XOxx'
-     'O.   ok      ll     :xdx    'Od.
-      l:   'Kd.  .do       xN,     .lxl;'.
-      ..    ;kkookd.       .:.       .'::.
-              .',.
-                                       .:c:.                    .;lol;,.
-       .'. .clll.                      l0kk'                 .lxo:'.cxdk.
-     ckkol;dOc:kk                      .;::   ..    .,,'    ;OOO.   ;cll
-     xXo:lONd. .x'                       cN, :O,   :Kkccll..x;;k.  .dOo.
-     oX, '00.   l: .:.    :l             ;WlxXc   :Kl    co . 'x''dKxcok,
-     ox   cd    :l .xo.  :KO.            .OXd.   ,No      l,  c0kxl'  .dx
-     od   cx    :l  .xOdO0ok:            ;XO     lN,      c:.xXN0:    .do
-     lo   ck    :l   .::'  ox           .xdk.    oN'      l',ook:     ;x:
-     lo   :x    :c         ox.         .ko.k;    lW:     co    ll    .xd.
-     ''    .    ..       .'kx,         :X, xl    .k0c. .ox.    ,c  .;o:
-                        'xxo           lX' xo      'lddd:      .,,;,.
-                        .c:            .xold'                   .
+                                             .,,.       .;:.
+                                           .dXWNN0d,  ,xXNX0.
+        .lol:                              ;NWNNNNkkkkXKNN0K.
+        dk::X'                             .oXWWNNKkNWXKKd0d
+       'Oo.lK.                               :KWNWddNWWKlkk.
+       ,Ol.kl    'dxlc:.  .o,             ..  .dNWNNOXWX0c
+        dO0l    lXl. .,o,  :0:    .;.  .lOxo0;  :0N0ON0c.
+        oXc    'Kc     ;O.  lN;  .xd   xKl.lX;    dKO:
+       'cO:    lk      .O'  .Ox  cX,  .Xx.:0:     ,k,
+         ox    od      'k.   'O'.Ol   ;XOxx'
+         'O.   ok      ll     :xdx    'Od.
+          l:   'Kd.  .do       xN,     .lxl;'.
+          ..    ;kkookd.       .:.       .'::.
+                  .',.
+                                           .:c:.                    .;lol;,.
+           .'. .clll.                      l0kk'                 .lxo:'.cxdk.
+         ckkol;dOc:kk                      .;::   ..    .,,'    ;OOO.   ;cll
+         xXo:lONd. .x'                       cN, :O,   :Kkccll..x;;k.  .dOo.
+         oX, '00.   l: .:.    :l             ;WlxXc   :Kl    co . 'x''dKxcok,
+         ox   cd    :l .xo.  :KO.            .OXd.   ,No      l,  c0kxl'  .dx
+         od   cx    :l  .xOdO0ok:            ;XO     lN,      c:.xXN0:    .do
+         lo   ck    :l   .::'  ox           .xdk.    oN'      l',ook:     ;x:
+         lo   :x    :c         ox.         .ko.k;    lW:     co    ll    .xd.
+         ''    .    ..       .'kx,         :X, xl    .k0c. .ox.    ,c  .;o:
+                            'xxo           lX' xo      'lddd:      .,,;,.
+                            .c:            .xold'                   .
 
-        .''.      ,:'        ':'                                                .....         .;.
-     .c::;,;;:'   'ONl     .lKO'  'l:      .lc.      .cl.   .:c:::cc,.      'loc::::cldl.     lWx.
-     c.....',.:c   .xXc    dNd.  .OXXo     'XK.      .0N' ,kO:.   .'d0d.  .xXo.       .lKd.   dX,
-     c  .'';k;.x,    oXo. oXo.   l0;dNc    .XK.      .OX':K0,        cXK,'0Xl           oNk.  xx
-     c' ':';0o'x.     xNkkXc    ;Kc .0K.   .XK,......,0XcKXo          xNdlNk.           ,XNc .O:
-     .;,''',ko;.      .lXNl    ;XO...,0x.  .XXc,,,,,,c0XlKNo          dNxlNk.           ,KNl ,k.
-         ...           .0W,   ;K0o::::oXO. .XK.      .OX,oN0.        ,0X:,KXc           cNO. oo
-                       'KW;  ,X0'      oWd 'XK.      .0X' cKO.     .:0k,  ,0Xc         ,0O,  c,
-                       ,KW;  cx;       .dx;'dd.      .ox.  .;lc:;;:lc,     .cxdc;'.';cdx;   ';.
-                       .co.                                                   ..',,''.      ;o.
+            .''.      ,:'        ':'                                                .....         .;.
+         .c::;,;;:'   'ONl     .lKO'  'l:      .lc.      .cl.   .:c:::cc,.      'loc::::cldl.     lWx.
+         c.....',.:c   .xXc    dNd.  .OXXo     'XK.      .0N' ,kO:.   .'d0d.  .xXo.       .lKd.   dX,
+         c  .'';k;.x,    oXo. oXo.   l0;dNc    .XK.      .OX':K0,        cXK,'0Xl           oNk.  xx
+         c' ':';0o'x.     xNkkXc    ;Kc .0K.   .XK,......,0XcKXo          xNdlNk.           ,XNc .O:
+         .;,''',ko;.      .lXNl    ;XO...,0x.  .XXc,,,,,,c0XlKNo          dNxlNk.           ,KNl ,k.
+             ...           .0W,   ;K0o::::oXO. .XK.      .OX,oN0.        ,0X:,KXc           cNO. oo
+                           'KW;  ,X0'      oWd 'XK.      .0X' cKO.     .:0k,  ,0Xc         ,0O,  c,
+                           ,KW;  cx;       .dx;'dd.      .ox.  .;lc:;;:lc,     .cxdc;'.';cdx;   ';.
+                           .co.                                                   ..',,''.      ;o.
 
 
 
-    Please vote for my design!!
-    https://git.corp.yahoo.com/pages/stanleyn/design-the-case/#voting-steps
--->
+        Please vote for my design!!
+        https://github.com/pages/stanleyhlng/design-the-case/
+    -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Yahoo | Smart Phones, Smart Fun - Design the Case!</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/animate.min.css">
+    <link rel="stylesheet" href="stylesheets/font-awesome.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper clearfix">
-      <header>
+</head>
+<body>
+<div class="wrapper clearfix">
+    <div class="thank-you">
+        <div>
+            <strong>THANK YOU</strong><br/>
+            <span>FOR YOUR VOTE!</span>
+        </div>
+        <button class="close">
+            <i class="fa fa-times" aria-hidden="true"></i>
+        </button>
+    </div>
+    <header>
         <h1>"I <span class="heart">❤</span> MY JOB @ YAHOO"</h1>
         <h4>DESIGN DETAILS</h4>
         <p>Let's <strong>personalize</strong> your mobile phone case!</p>
+    </header>
+    <section>
+        <div class="row">
+            <a href="assets/images/i-love-my-job-2014.png" target="_blank"><img
+                    src="assets/images/i-love-my-job-2014.png"/></a>
+            <a href="assets/images/i-love-my-job-stanleyn.png" target="_blank"><img
+                    src="assets/images/i-love-my-job-stanleyn.png"/></a>
+        </div>
 
-        <!--
-        <p class="view"><a href="https://git.corp.yahoo.com/stanleyn/design-the-case">View the Project on GitHub <small>stanleyn/design-the-case</small></a></p>
-        //-->
+        <div class="row">
+            <h2>
+                <a name="avatar" class="anchor" href="#avatar"><span class="octicon octicon-link"></span></a>Avatar</h2>
+            <a href="assets/images/avatar.png" target="_blank"><img src="assets/images/avatar.png"/></a>
+        </div>
 
-      </header>
-      <section>
-<div class="row">
-    <a href="assets/images/i-love-my-job-stanleyn.png" target="_blank"><img src="assets/images/i-love-my-job-stanleyn.png" /></a>
+        <div class="row">
+            <h2>
+                <a name="name-yos" class="anchor" href="#yos"><span class="octicon octicon-link"></span></a>Name & Year
+                of Service</h2>
+            <a href="assets/images/name-yos.png" target="_blank"><img src="assets/images/name-yos.png"/></a>
+        </div>
+
+        <div class="row">
+            <h2>
+                <a name="remarks" class="anchor" href="#remarks"><span class="octicon octicon-link"></span></a>Remarks
+            </h2>
+            <a href="assets/images/remark.png" target="_blank"><img src="assets/images/remark.png"/></a>
+        </div>
+
+        <div class="row">
+            <h2>
+                <a name="black" class="anchor" href="#black"><span class="octicon octicon-link"></span></a>Black Label
+                Collection</h2>
+            <a href="assets/images/black.png" target="_blank"><img src="assets/images/black.png"/></a>
+        </div>
+
+        <div class="row">
+            <h2>
+                <a name="walkthrough" class="anchor" href="#walkthrough"><span class="octicon octicon-link"></span></a>Walk
+                Through
+            </h2>
+            <div>
+            <a href="assets/images/ios8_designthecase.gif" target="_blank"><img class="animated-gif"
+                                                                                src="assets/images/ios8_designthecase.gif"/></a>
+            <a href="assets/images/ios8_designthecase_debug.gif" target="_blank"><img class="animated-gif"
+                                                                                      src="assets/images/ios8_designthecase_debug.gif"/></a>
+            </div>
+            <a href="http://bit.ly/ios8_designthecase">source code</a>
+        </div>
+
+    </section>
+    <footer>
+        <p>This project is maintained by <a href="http://bit.ly/ios8_designthecase">Stanley</a>.</p>
+        <p>
+            <small>Hosted on GitHub Pages</small>
+        </p>
+    </footer>
 </div>
+<script src="javascripts/scale.fix.js"></script>
+<script src="javascripts/jquery-2.1.1.min.js"></script>
+<script>
+    (function ($) {
+        var format = function (bold, color) {
+            return 'font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;font-size: 15px;' + (bold ? "font-weight: bold;" : "") + "color: " + color + ";";
+        };
 
-<div class="row critical">
-    <h2>
-    <a name="voting-steps" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>**Voting Steps**</h2>
-    <ol>
-        <li>Visit <a href="http://yo/designthecase-stanleyn" target="_blank">http://yo/designthecase-stanleyn</a></li>
-        <li>Select <strong>"Most Thumbs Up"</strong> option</li>
-        <li>Search <strong>"I ❤ MY JOB @ YAHOO"</strong> in page 1</li>
-        <li>Click <strong>"Thumbs Up"</strong> button</li>
-        <li>Observe the count increased by 1</li>
-        <li>Done!</li>
-    </ul>
-</div>
+        var voteForMe = function () {
+            return console.log("%cThank you for your vote and support ❤%c", format(!1, "#ed145b"), format(!1, "#333")), window.location.href = "http://bit.ly/1Sc18vl", "";
+        };
 
-<div class="row">
-    <h2>
-    <a name="avatar" class="anchor" href="#avatar"><span class="octicon octicon-link"></span></a>Avatar</h2>
-    <a href="assets/images/avatar.png" target="_blank"><img src="assets/images/avatar.png" /></a>
-</div>
-
-<div class="row">
-    <h2>
-    <a name="name-yos" class="anchor" href="#yos"><span class="octicon octicon-link"></span></a>Name & Year of Service</h2>
-    <a href="assets/images/name-yos.png" target="_blank"><img src="assets/images/name-yos.png" /></a>
-</div>
-
-<div class="row">
-    <h2>
-    <a name="remarks" class="anchor" href="#remarks"><span class="octicon octicon-link"></span></a>Remarks</h2>
-    <a href="assets/images/remark.png" target="_blank"><img src="assets/images/remark.png" /></a>
-</div>
-
-<div class="row">
-    <h2>
-    <a name="black" class="anchor" href="#black"><span class="octicon octicon-link"></span></a>Black Label Collection</h2>
-    <a href="assets/images/black.png" target="_blank"><img src="assets/images/black.png" /></a>
-</div>
-
-<div class="row">
-    <h2>
-    <a name="walkthrough" class="anchor" href="#walkthrough"><span class="octicon octicon-link"></span></a>Walk Through</h2>
-    <a href="assets/images/ios8_designthecase.gif" target="_blank"><img class="animated-gif" src="assets/images/ios8_designthecase.gif" /></a>
-    <a href="assets/images/ios8_designthecase_debug.gif" target="_blank"><img class="animated-gif" src="assets/images/ios8_designthecase_debug.gif" /></a>
-</div>
-
-<div class="row critical">
-    <h2>
-    <a name="vote" class="anchor" href="#vote"><span class="octicon octicon-link"></span></a>
-    <span class="heart">❤</span>&nbsp;<a href="#voting-steps">my design? Please vote for me!! Thanks!!</a>
-    </h2>
-</div>
-<!--
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (@defunkt), PJ Hyett (@pjhyett), and Tom Preston-Werner (@mojombo) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://git.corp.yahoo.com/stanleyn">stanleyn</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-//-->
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://git.corp.yahoo.com/stanleyn/design-the-case">stanleyn</a></p>
-        <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    <script src="javascripts/jquery-2.1.1.min.js"></script>
-    <script>
-        (function ($) {
-            var format = function (bold, color) {
-                return 'font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;font-size: 15px;' + (bold ? "font-weight: bold;" : "") + "color: " + color + ";";
-            };
-
-            var voteForMe = function () {
-                return console.log("%cThank you for your vote and support ❤%c", format(!1, "#ed145b"), format(!1, "#333")), window.location.href = "http://yo/designthecase-stanleyn-voteforme", "";
-            };
-
-            $(document).ready(function () {
-                $('span.heart').click(function () {
-                    $('html').toggleClass('dark-theme');
-                });
-
-                window.voteForMe = voteForMe;
-                console.log("%c♥ my design? %c--> %cvoteForMe()", format(!0, "#ed145b"), format(!0, "#777"), format(!0, "#2b2"));
+        $(document).ready(function () {
+            $('span.heart').click(function () {
+                $('html').toggleClass('dark-theme');
             });
 
-        }(jQuery));
-    </script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            $('button.close').click(function () {
+                var animationEnd = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
+                $('html .thank-you').addClass('animated fadeOut').one(animationEnd, function () {
+                    $('html .thank-you').removeClass('thank-you-active');
+                });
+            });
 
-      ga('create', 'UA-55626551-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </body>
+            console.log(window.location.hash);
+            if (window.location.hash) {
+                // Fragment exists
+                if (window.location.hash == '#thankyou') {
+                    $('html .thank-you').addClass('thank-you-active');
+                }
+            } else {
+                // Fragment doesn't exist
+                $('html header h1').addClass('animated bounce');
+            }
+
+            window.voteForMe = voteForMe;
+            console.log("%c♥ my design? %c--> %cvoteForMe()", format(!0, "#ed145b"), format(!0, "#777"), format(!0, "#2b2"));
+        });
+
+    }(jQuery));
+</script>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-55626551-1', 'auto');
+    ga('send', 'pageview');
+</script>
+</body>
 </html>
