--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     </section>
     <footer>
-        <p>This project is maintained by <a href="http://bit.ly/ios8_designthecase">Stanley</a>.</p>
+        <p>This project is maintained by <a href="http://bit.ly/designthecase">Stanley</a>.</p>
         <p>
             <small>Hosted on GitHub Pages</small>
         </p>
@@ -152,7 +152,7 @@
         };
 
         var voteForMe = function () {
-            return console.log("%cThank you for your vote and support ❤%c", format(!1, "#ed145b"), format(!1, "#333")), window.location.href = "http://bit.ly/1Sc18vl", "";
+            return console.log("%cThank you for your vote and support ❤%c", format(!1, "#ed145b"), format(!1, "#333")), window.location.href = "http://bit.ly/designthecase#thankyou", "";
         };
 
         $(document).ready(function () {
