Update the github link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     </section>
     <footer>
-        <p>This project is maintained by <a href="http://bit.ly/designthecase">Stanley</a>.</p>
+        <p>This project is maintained by <a href="http://bit.ly/designthecase-github">Stanley</a>.</p>
         <p>
             <small>Hosted on GitHub Pages</small>
         </p>
