--- a/index.html
+++ b/index.html
@@ -139,10 +139,15 @@
     <footer>
         <p>This project is maintained by <a href="http://bit.ly/designthecase-github">Stanley</a>.</p>
         <p>
+            <a href="https://twitter.com/stanleyhlng" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @stanleyhlng</a>
+            <iframe src="https://ghbtns.com/github-btn.html?user=stanleyhlng&repo=design-the-case&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+        </p>
+        <p>
             <small>Hosted on GitHub Pages</small>
         </p>
     </footer>
 </div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <script src="javascripts/scale.fix.js"></script>
 <script src="javascripts/jquery-2.1.1.min.js"></script>
 <script>
